# processlog

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
configs/: process_config.yaml
configs/examples/: README.md  baseline_process.yaml  high_variance_process.yaml  loan-origination.yaml  simple_process.yaml
docs/: ARCHITECTURE.md  OUTPUT_DESCRIPTION.md  PROCESS_DEFINITION.md  USAGE.md  research_summary.md
examples/: basic_usage.py
scripts/: README.md  generate_visualizations.py  run_visualizations.sh
src/event_log_gen/: __init__.py  __main__.py  cli.py
src/event_log_gen/config/: __init__.py  validator.py
src/event_log_gen/core/: generator.py
src/event_log_gen/exporters/: __init__.py  csv_exporter.py  json_exporter.py  parquet_exporter.py  xes_exporter.py
src/event_log_gen/utils/: __init__.py
src/processlog/: __init__.py  __main__.py  cli.py
src/processlog/config/: loader.py  validator.py
src/processlog/core/: __init__.py  generator.py
src/processlog/exporters/: csv_exporter.py  json_exporter.py  metadata.py  parquet_exporter.py  xes_exporter.py
src/processlog/utils/: naming.py
tests/: conftest.py  test_cli.py  test_contract_conformance.py  test_custom_attr_ordering.py  test_integration_simple.py  test_integration_timezone.py  test_metadata_columns.py  test_pm4py_compatibility.py  test_pm4py_full_workflow.py  test_pm4py_visualization.py
tests/test_config/: test_loader.py  test_validator.py
tests/test_core/: test_emit_labels.py  test_generator.py
tests/test_exporters/: test_csv_exporter.py  test_json_exporter.py  test_parquet_exporter.py  test_xes_exporter.py  test_xes_optional_dependency.py
