[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-log-gen"
version = "0.5.0"
description = "Generate realistic synthetic process event logs for testing and developing process mining software"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Karl Romer", email = "karlromer.dev@gmail.com"}
]
keywords = ["process-mining", "event-log", "synthetic-data", "pm4py", "xes", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "pm4py>=2.7.0",
    "jsonschema>=4.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "isort>=5.12.0",
    "pandas-stubs>=2.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
event-log-gen = "event_log_gen.cli:main"

[project.urls]
Homepage = "https://github.com/karlromer/event-log-gen"
Documentation = "https://github.com/karlromer/event-log-gen/blob/main/README.md"
Repository = "https://github.com/karlromer/event-log-gen"
Issues = "https://github.com/karlromer/event-log-gen/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=event_log_gen --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
